--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,6 +5,6 @@ sql:
     schema: "./db/migration/"
     gen:
       go:
-        package: "simple_bank"
+        package: "db"
         out: "db/sqlc"
         sql_package: "pgx/v5"
